syntax = "proto3";

package routeguide;

service RouteGuide {
  // 普通示例
  rpc GetFeature(Point) returns (Response) {}

  // 服务器端流RPC
  rpc ListFeatures(Null) returns (stream Response) {}

  // 客户端流传输的RPC
  rpc RecordRoute(stream Point) returns (Response) {}

  // 双向流RPC
  rpc RouteChat(stream Response) returns (stream Response) {}
}


// 定义Point数据类型
message Point {
  int32 latitude = 1;
  int32 longitude = 2;
}

message Rectangle {
  Point lo = 1;
  Point hi = 2;
}

message Feature {
  string name = 1;
  Point location = 2;
}

message RouteNote {
  Point location = 1;
  string message = 2;
}

message RouteSummary {
  int32 point_count = 1;
  int32 feature_count = 2;
  int32 distance = 3;
  int32 elapsed_time = 4;
}

message Response {
  string message = 1;
}

message Null {
}